syntax = "proto3";

import "google/protobuf/empty.proto";

package ryGaming;

service RyGamer {
  // Get available ticket count
  rpc GetAvailableTickets (google.protobuf.Empty) returns (AvailableTicketsResponse);
  // Buy tickets
  rpc BuyTickets (BuyTicketsRequest) returns (BuyTicketsResponse);

  rpc Login (LoginRequest) returns (LoginResponse) {}

  rpc TopUp (WalletTopUpRequest) returns (WalletTopUpResponse) {}

  rpc Withdraw (WalletWithdrawRequest) returns (WalletWithdrawResponse) {}

  rpc Bet (BetRequest) returns (BetResponse) {}
}

// The response message containing the available ticket count
message AvailableTicketsResponse {
  int32 count = 1;
}

// The request message to buy tickets
message BuyTicketsRequest {
  int32 count = 1;
}

// The response message to buy tickets
message BuyTicketsResponse {
  bool success = 1;
}

message LoginRequest{
  string Name = 1;
  string Password =2;
}

message WalletTopUpRequest {
  double TopUpAmount =1;
}

message WalletWithdrawRequest {
  double WithdrawAmount =1;
}


message LoginResponse {
	bool success = 1;
	string message = 2;
	string token =3;
}

message WalletTopUpResponse {
	bool success = 1;
	string message = 2;
	double balanceAfter =3;   
}

message WalletWithdrawResponse {
	bool success = 1;
	string message = 2;
	double balanceAfter =3;   
}

message BetRequest {
	string userId = 1;
	double betAmount =2;   
}

message BetResponse {
	bool success = 1;
	string message = 2;
	double WinLossAmount =3;   
}
